build: access to native methods is configured